Fixed issues reported by SonarCloud