@@ -112,7 +112,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         RestAssured.port = localPort;
         RestAssured.enableLoggingOfRequestAndResponseIfValidationFails();
         final RequestSpecBuilder requestSpecBuilder = new RequestSpecBuilder();
@@ -132,7 +132,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         RestAssured.reset();
     }
 
@@ -141,7 +141,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
     class RetrievePagedTests {
 
         @Test
-        public void should_return_404() {
+        void should_return_404() {
             //@formatter:off
             given()
                 .header(HttpHeaders.AUTHORIZATION, obtainUserAccessToken())
@@ -157,7 +157,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero() {
+        void should_return_zero() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -184,7 +184,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_one() {
+        void should_return_one() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -213,7 +213,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_many() {
+        void should_return_many() {
             int size = 42;
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -244,7 +244,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero_when_incorrect_spexare() {
+        void should_return_zero_when_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -272,7 +272,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero_when_incorrect_activity() {
+        void should_return_zero_when_incorrect_activity() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -306,7 +306,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
     class RetrievePagedWithFilteringTests {
 
         @Test
-        public void should_return_404() {
+        void should_return_404() {
             //@formatter:off
             given()
                 .header(HttpHeaders.AUTHORIZATION, obtainUserAccessToken())
@@ -323,7 +323,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero() {
+        void should_return_zero() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -353,7 +353,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_one() {
+        void should_return_one() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -383,7 +383,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_many() {
+        void should_return_many() {
             int size = 42;
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -421,7 +421,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero_when_incorrect_spexare() {
+        void should_return_zero_when_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -450,7 +450,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero_when_incorrect_activity() {
+        void should_return_zero_when_incorrect_activity() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -484,7 +484,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
     @DisplayName("Retrieve")
     class RetrieveTests {
         @Test
-        public void should_return_found() {
+        void should_return_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -515,7 +515,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_not_found() {
+        void should_return_404_when_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -537,7 +537,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_spexare_not_found() {
+        void should_return_404_when_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -561,7 +561,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_activity_not_found() {
+        void should_return_404_when_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -585,7 +585,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_task_activity_not_found() {
+        void should_return_404_when_task_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -609,7 +609,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_incorrect_spexare() {
+        void should_return_404_when_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -634,7 +634,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_incorrect_activity() {
+        void should_return_404_when_incorrect_activity() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -659,7 +659,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_incorrect_task_activity() {
+        void should_return_404_when_incorrect_task_activity() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -689,7 +689,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
     class CreateTests {
 
         @Test
-        public void should_create_and_return_201() {
+        void should_create_and_return_201() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -733,7 +733,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_409_when_creating_already_existing_value() {
+        void should_return_409_when_creating_already_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -774,7 +774,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_creating_and_spexare_not_found() {
+        void should_return_404_when_creating_and_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -797,11 +797,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_creating_and_activity_not_found() {
+        void should_return_404_when_creating_and_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -826,7 +826,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_creating_and_task_activity_not_found() {
+        void should_return_404_when_creating_and_task_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -851,7 +851,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_creating_and_vocal_not_found() {
+        void should_return_404_when_creating_and_vocal_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -873,11 +873,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_409_when_creating_and_incorrect_spexare() {
+        void should_return_409_when_creating_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -901,11 +901,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.CONFLICT.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_409_when_creating_and_incorrect_activity() {
+        void should_return_409_when_creating_and_incorrect_activity() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -929,7 +929,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.CONFLICT.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
     }
 
@@ -938,7 +938,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
     class UpdateTests {
 
         @Test
-        public void should_update_and_return_202() {
+        void should_update_and_return_202() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -996,14 +996,14 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(after).hasSize(1);
-            assertThat(after.get(0))
+            assertThat(after.getFirst())
                     .extracting("id", "role")
                     .contains(before.getId(), updateDto.getRole());
             assertThat(repository.count()).isEqualTo(1);
         }
 
         @Test
-        public void should_return_404_when_updating_non_existing_value() {
+        void should_return_404_when_updating_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1026,11 +1026,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_spexare_not_found() {
+        void should_return_404_when_updating_and_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1053,11 +1053,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_activity_not_found() {
+        void should_return_404_when_updating_and_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1080,11 +1080,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_task_activity_not_found() {
+        void should_return_404_when_updating_and_task_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1107,11 +1107,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_vocal_not_found() {
+        void should_return_404_when_updating_and_vocal_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1134,11 +1134,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_spexare() {
+        void should_return_422_when_updating_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -1168,7 +1168,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_activity() {
+        void should_return_422_when_updating_and_incorrect_activity() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1198,7 +1198,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_task_activity() {
+        void should_return_422_when_updating_and_incorrect_task_activity() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1233,7 +1233,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
     class PartialUpdateTests {
 
         @Test
-        public void should_update_and_return_202() {
+        void should_update_and_return_202() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1291,14 +1291,14 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(after).hasSize(1);
-            assertThat(after.get(0))
+            assertThat(after.getFirst())
                     .extracting("id", "role")
                     .contains(before.getId(), updateDto.getRole());
             assertThat(repository.count()).isEqualTo(1);
         }
 
         @Test
-        public void should_return_404_when_updating_non_existing_value() {
+        void should_return_404_when_updating_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1321,11 +1321,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_spexare_not_found() {
+        void should_return_404_when_updating_and_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1348,11 +1348,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_activity_not_found() {
+        void should_return_404_when_updating_and_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1375,11 +1375,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_task_activity_not_found() {
+        void should_return_404_when_updating_and_task_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1402,11 +1402,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_vocal_not_found() {
+        void should_return_404_when_updating_and_vocal_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1429,11 +1429,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_spexare() {
+        void should_return_422_when_updating_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -1463,7 +1463,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_activity() {
+        void should_return_422_when_updating_and_incorrect_activity() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1493,7 +1493,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_task_activity() {
+        void should_return_422_when_updating_and_incorrect_task_activity() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1528,7 +1528,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
     class DeleteTests {
 
         @Test
-        public void should_delete_and_return_204() {
+        void should_delete_and_return_204() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1567,11 +1567,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(result).isEmpty();
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_deleting_non_existing_value() {
+        void should_return_404_when_deleting_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1592,11 +1592,11 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_deleting_and_spexare_not_found() {
+        void should_return_404_when_deleting_and_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1622,7 +1622,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_deleting_and_activity_not_found() {
+        void should_return_404_when_deleting_and_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1648,7 +1648,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_deleting_and_task_activity_not_found() {
+        void should_return_404_when_deleting_and_task_activity_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1674,7 +1674,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_deleting_and_incorrect_spexare() {
+        void should_return_422_when_deleting_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
@@ -1701,7 +1701,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_deleting_and_incorrect_activity() {
+        void should_return_422_when_deleting_and_incorrect_activity() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
@@ -1728,7 +1728,7 @@ public class ActorApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_deleting_and_incorrect_task_activity() {
+        void should_return_422_when_deleting_and_incorrect_task_activity() {
             var spexare = persistSpexare(randomizeSpexare());
             var category = persistTaskCategory(randomizeTaskCategory());
             var task = persistTask(randomizeTask(category));
