@@ -87,7 +87,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         RestAssured.port = localPort;
         RestAssured.enableLoggingOfRequestAndResponseIfValidationFails();
         final RequestSpecBuilder requestSpecBuilder = new RequestSpecBuilder();
@@ -103,7 +103,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         RestAssured.reset();
     }
 
@@ -112,7 +112,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
     class RetrievePagedTests {
 
         @Test
-        public void should_return_404() {
+        void should_return_404() {
             //@formatter:off
             given()
                 .header(HttpHeaders.AUTHORIZATION, obtainUserAccessToken())
@@ -126,7 +126,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero() {
+        void should_return_zero() {
             var spexare = persistSpexare(randomizeSpexare());
 
             //@formatter:off
@@ -147,7 +147,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_one() {
+        void should_return_one() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             persistAddress(randomizeAddress(type, spexare));
@@ -170,7 +170,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_many() {
+        void should_return_many() {
             int size = 42;
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
@@ -201,7 +201,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
     class RetrievePagedWithFilteringTests {
 
         @Test
-        public void should_return_404() {
+        void should_return_404() {
             //@formatter:off
             given()
                 .header(HttpHeaders.AUTHORIZATION, obtainUserAccessToken())
@@ -216,7 +216,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero() {
+        void should_return_zero() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             persistAddress(randomizeAddress(type, spexare));
@@ -240,7 +240,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_one() {
+        void should_return_one() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var address = persistAddress(randomizeAddress(type, spexare));
@@ -264,7 +264,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_many() {
+        void should_return_many() {
             int size = 42;
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
@@ -301,7 +301,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
     @DisplayName("Retrieve")
     class RetrieveTests {
         @Test
-        public void should_return_found() {
+        void should_return_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var address = persistAddress(randomizeAddress(type, spexare));
@@ -326,7 +326,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_not_found() {
+        void should_return_404_when_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
 
             //@formatter:off
@@ -342,7 +342,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_spexare_not_found() {
+        void should_return_404_when_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var address = persistAddress(randomizeAddress(type, spexare));
@@ -365,7 +365,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
     class CreateTests {
 
         @Test
-        public void should_create_and_return_201() {
+        void should_create_and_return_201() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var dto = random.nextObject(AddressCreateDto.class);
@@ -401,7 +401,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_409_when_creating_already_existing_value() {
+        void should_return_409_when_creating_already_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var dto = random.nextObject(AddressCreateDto.class);
@@ -434,7 +434,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_creating_and_spexare_not_found() {
+        void should_return_404_when_creating_and_spexare_not_found() {
             var type = persistType(randomizeType());
             var dto = random.nextObject(AddressCreateDto.class);
 
@@ -450,11 +450,11 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_creating_and_type_not_found() {
+        void should_return_404_when_creating_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var dto = random.nextObject(AddressCreateDto.class);
 
@@ -470,7 +470,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
     }
@@ -480,7 +480,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
     class UpdateTests {
 
         @Test
-        public void should_update_and_return_202() {
+        void should_update_and_return_202() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var dto = random.nextObject(AddressCreateDto.class);
@@ -529,14 +529,14 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(after).hasSize(1);
-            assertThat(after.get(0))
+            assertThat(after.getFirst())
                     .extracting("id", "streetAddress")
                     .contains(before.getId(), updateDto.getStreetAddress());
             assertThat(repository.count()).isEqualTo(1);
         }
 
         @Test
-        public void should_return_404_when_updating_non_existing_value() {
+        void should_return_404_when_updating_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var dto = random.nextObject(AddressUpdateDto.class);
@@ -553,11 +553,11 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_spexare_not_found() {
+        void should_return_404_when_updating_and_spexare_not_found() {
             var type = persistType(randomizeType());
             var dto = random.nextObject(AddressUpdateDto.class);
 
@@ -573,11 +573,11 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_type_not_found() {
+        void should_return_404_when_updating_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var dto = random.nextObject(AddressUpdateDto.class);
 
@@ -593,11 +593,11 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_spexare() {
+        void should_return_422_when_updating_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
@@ -626,7 +626,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
     class PartialUpdateTests {
 
         @Test
-        public void should_update_and_return_202() {
+        void should_update_and_return_202() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var dto = random.nextObject(AddressCreateDto.class);
@@ -674,14 +674,14 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(after).hasSize(1);
-            assertThat(after.get(0))
+            assertThat(after.getFirst())
                     .extracting("id", "streetAddress", "city")
                     .contains(result.getId(), updateDto.getStreetAddress(), dto.getCity());
             assertThat(repository.count()).isEqualTo(1);
         }
 
         @Test
-        public void should_return_404_when_updating_non_existing_value() {
+        void should_return_404_when_updating_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var dto = random.nextObject(AddressUpdateDto.class);
@@ -698,11 +698,11 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_spexare_not_found() {
+        void should_return_404_when_updating_and_spexare_not_found() {
             var type = persistType(randomizeType());
             var dto = random.nextObject(AddressUpdateDto.class);
 
@@ -718,11 +718,11 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_type_not_found() {
+        void should_return_404_when_updating_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var dto = random.nextObject(AddressUpdateDto.class);
 
@@ -738,11 +738,11 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_spexare() {
+        void should_return_422_when_updating_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
@@ -772,7 +772,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
     class DeleteTests {
 
         @Test
-        public void should_delete_and_return_204() {
+        void should_delete_and_return_204() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var address = persistAddress(randomizeAddress(type, spexare));
@@ -803,11 +803,11 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(result).isEmpty();
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_deleting_non_existing_value() {
+        void should_return_404_when_deleting_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
 
@@ -822,11 +822,11 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_deleting_and_spexare_not_found() {
+        void should_return_404_when_deleting_and_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var address = persistAddress(randomizeAddress(type, spexare));
@@ -846,7 +846,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_deleting_and_type_not_found() {
+        void should_return_404_when_deleting_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var address = persistAddress(randomizeAddress(type, spexare));
@@ -866,7 +866,7 @@ public class AddressApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_deleting_and_incorrect_spexare() {
+        void should_return_422_when_deleting_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
