@@ -83,7 +83,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         RestAssured.port = localPort;
         RestAssured.enableLoggingOfRequestAndResponseIfValidationFails();
         final RequestSpecBuilder requestSpecBuilder = new RequestSpecBuilder();
@@ -99,7 +99,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         RestAssured.reset();
     }
 
@@ -108,7 +108,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
     class RetrievePagedTests {
 
         @Test
-        public void should_return_404() {
+        void should_return_404() {
             //@formatter:off
             given()
                 .header(HttpHeaders.AUTHORIZATION, obtainUserAccessToken())
@@ -122,7 +122,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero() {
+        void should_return_zero() {
             var spexare = persistSpexare(randomizeSpexare());
 
             //@formatter:off
@@ -143,7 +143,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_one() {
+        void should_return_one() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             persistConsent(randomizeConsent(type, spexare));
@@ -166,7 +166,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_many() {
+        void should_return_many() {
             int size = 42;
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
@@ -196,7 +196,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
     @DisplayName("Retrieve")
     class RetrieveTests {
         @Test
-        public void should_return_found() {
+        void should_return_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var consent = persistConsent(randomizeConsent(type, spexare));
@@ -221,7 +221,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_not_found() {
+        void should_return_404_when_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
 
             //@formatter:off
@@ -237,7 +237,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_spexare_not_found() {
+        void should_return_404_when_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var consent = persistConsent(randomizeConsent(type, spexare));
@@ -260,7 +260,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
     class CreateTests {
 
         @Test
-        public void should_create_and_return_201() {
+        void should_create_and_return_201() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
 
@@ -294,7 +294,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_409_when_creating_already_existing_value() {
+        void should_return_409_when_creating_already_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
 
@@ -324,7 +324,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_creating_and_spexare_not_found() {
+        void should_return_404_when_creating_and_spexare_not_found() {
             var type = persistType(randomizeType());
 
             //@formatter:off
@@ -338,11 +338,11 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_creating_and_type_not_found() {
+        void should_return_404_when_creating_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
 
             //@formatter:off
@@ -356,7 +356,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
     }
@@ -366,7 +366,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
     class UpdateTests {
 
         @Test
-        public void should_update_and_return_202() {
+        void should_update_and_return_202() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var consent = persistConsent(randomizeConsent(type, spexare));
@@ -397,14 +397,14 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(result).hasSize(1);
-            assertThat(result.get(0))
+            assertThat(result.getFirst())
                     .extracting("id", "value")
                     .contains(consent.getId(), Boolean.FALSE);
             assertThat(repository.count()).isEqualTo(1);
         }
 
         @Test
-        public void should_return_404_when_updating_non_existing_value() {
+        void should_return_404_when_updating_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
 
@@ -419,11 +419,11 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_spexare_not_found() {
+        void should_return_404_when_updating_and_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var consent = persistConsent(randomizeConsent(type, spexare));
@@ -443,7 +443,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_updating_and_type_not_found() {
+        void should_return_404_when_updating_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var consent = persistConsent(randomizeConsent(type, spexare));
@@ -463,7 +463,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_spexare() {
+        void should_return_422_when_updating_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
@@ -489,7 +489,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
     class DeleteTests {
 
         @Test
-        public void should_delete_and_return_204() {
+        void should_delete_and_return_204() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var consent = persistConsent(randomizeConsent(type, spexare));
@@ -520,11 +520,11 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(result).isEmpty();
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_deleting_non_existing_value() {
+        void should_return_404_when_deleting_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
 
@@ -539,11 +539,11 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_deleting_and_spexare_not_found() {
+        void should_return_404_when_deleting_and_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var consent = persistConsent(randomizeConsent(type, spexare));
@@ -563,7 +563,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_deleting_and_type_not_found() {
+        void should_return_404_when_deleting_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var consent = persistConsent(randomizeConsent(type, spexare));
@@ -583,7 +583,7 @@ public class ConsentApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_deleting_and_incorrect_spexare() {
+        void should_return_422_when_deleting_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
