@@ -83,7 +83,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         RestAssured.port = localPort;
         RestAssured.enableLoggingOfRequestAndResponseIfValidationFails();
         final RequestSpecBuilder requestSpecBuilder = new RequestSpecBuilder();
@@ -99,7 +99,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         RestAssured.reset();
     }
 
@@ -108,7 +108,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
     class RetrievePagedTests {
 
         @Test
-        public void should_return_404() {
+        void should_return_404() {
             //@formatter:off
             given()
                 .header(HttpHeaders.AUTHORIZATION, obtainUserAccessToken())
@@ -122,7 +122,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_zero() {
+        void should_return_zero() {
             var spexare = persistSpexare(randomizeSpexare());
 
             //@formatter:off
@@ -143,7 +143,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_one() {
+        void should_return_one() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             persistToggle(randomizeToggle(type, spexare));
@@ -166,7 +166,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_many() {
+        void should_return_many() {
             int size = 42;
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
@@ -196,7 +196,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
     @DisplayName("Retrieve")
     class RetrieveTests {
         @Test
-        public void should_return_found() {
+        void should_return_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var toggle = persistToggle(randomizeToggle(type, spexare));
@@ -221,7 +221,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_not_found() {
+        void should_return_404_when_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
 
             //@formatter:off
@@ -237,7 +237,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_spexare_not_found() {
+        void should_return_404_when_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var toggle = persistToggle(randomizeToggle(type, spexare));
@@ -260,7 +260,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
     class CreateTests {
 
         @Test
-        public void should_create_and_return_201() {
+        void should_create_and_return_201() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
 
@@ -294,7 +294,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_409_when_creating_already_existing_value() {
+        void should_return_409_when_creating_already_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
 
@@ -324,7 +324,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_creating_and_spexare_not_found() {
+        void should_return_404_when_creating_and_spexare_not_found() {
             var type = persistType(randomizeType());
 
             //@formatter:off
@@ -340,7 +340,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_creating_and_type_not_found() {
+        void should_return_404_when_creating_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
 
             //@formatter:off
@@ -354,7 +354,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
     }
@@ -364,7 +364,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
     class UpdateTests {
 
         @Test
-        public void should_update_and_return_202() {
+        void should_update_and_return_202() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var toggle = persistToggle(randomizeToggle(type, spexare));
@@ -395,14 +395,14 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(result).hasSize(1);
-            assertThat(result.get(0))
+            assertThat(result.getFirst())
                     .extracting("id", "value")
                     .contains(toggle.getId(), Boolean.FALSE);
             assertThat(repository.count()).isEqualTo(1);
         }
 
         @Test
-        public void should_return_404_when_updating_non_existing_value() {
+        void should_return_404_when_updating_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
 
@@ -417,11 +417,11 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_updating_and_spexare_not_found() {
+        void should_return_404_when_updating_and_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var toggle = persistToggle(randomizeToggle(type, spexare));
@@ -441,7 +441,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_updating_and_type_not_found() {
+        void should_return_404_when_updating_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var toggle = persistToggle(randomizeToggle(type, spexare));
@@ -461,7 +461,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_updating_and_incorrect_spexare() {
+        void should_return_422_when_updating_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
@@ -488,7 +488,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
     class DeleteTests {
 
         @Test
-        public void should_delete_and_return_204() {
+        void should_delete_and_return_204() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var toggle = persistToggle(randomizeToggle(type, spexare));
@@ -519,11 +519,11 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
             //@formatter:on
 
             assertThat(result).isEmpty();
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_deleting_non_existing_value() {
+        void should_return_404_when_deleting_non_existing_value() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
 
@@ -538,11 +538,11 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_deleting_and_spexare_not_found() {
+        void should_return_404_when_deleting_and_spexare_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var toggle = persistToggle(randomizeToggle(type, spexare));
@@ -562,7 +562,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_deleting_and_type_not_found() {
+        void should_return_404_when_deleting_and_type_not_found() {
             var spexare = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
             var toggle = persistToggle(randomizeToggle(type, spexare));
@@ -582,7 +582,7 @@ public class ToggleApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_422_when_deleting_and_incorrect_spexare() {
+        void should_return_422_when_deleting_and_incorrect_spexare() {
             var spexare1 = persistSpexare(randomizeSpexare());
             var spexare2 = persistSpexare(randomizeSpexare());
             var type = persistType(randomizeType());
