@@ -58,7 +58,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         RestAssured.port = localPort;
         RestAssured.enableLoggingOfRequestAndResponseIfValidationFails();
         final RequestSpecBuilder requestSpecBuilder = new RequestSpecBuilder();
@@ -73,7 +73,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         RestAssured.reset();
     }
 
@@ -82,7 +82,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     class RetrievePagedTests {
 
         @Test
-        public void should_return_zero() {
+        void should_return_zero() {
             // @formatter:off
             final List<TaskCategoryDto> result =
                     given()
@@ -100,7 +100,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_one() {
+        void should_return_one() {
             persistTaskCategory(randomizeTaskCategory());
 
             //@formatter:off
@@ -120,7 +120,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_many() {
+        void should_return_many() {
             int size = 42;
             IntStream.range(0, size).forEach(i -> persistTaskCategory(randomizeTaskCategory()));
 
@@ -147,7 +147,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     class RetrievePagedWithFilteringTests {
 
         @Test
-        public void should_return_zero() {
+        void should_return_zero() {
             persistTaskCategory(randomizeTaskCategory());
 
             // @formatter:off
@@ -168,7 +168,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_one() {
+        void should_return_one() {
             var task = persistTaskCategory(randomizeTaskCategory());
 
             //@formatter:off
@@ -189,7 +189,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_many() {
+        void should_return_many() {
             int size = 42;
             IntStream.range(0, size).forEach(i -> {
                 var taskCategory = randomizeTaskCategory();
@@ -223,7 +223,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     class CreateTests {
 
         @Test
-        public void should_create_and_return_201() throws Exception {
+        void should_create_and_return_201() throws Exception {
             final TaskCategoryCreateDto dto = random.nextObject(TaskCategoryCreateDto.class);
 
             //@formatter:off
@@ -247,7 +247,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_400_when_invalid_input() {
+        void should_return_400_when_invalid_input() {
             final TaskCategoryCreateDto dto = random.nextObject(TaskCategoryCreateDto.class);
             dto.setName(null);
 
@@ -262,7 +262,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.BAD_REQUEST.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
     }
 
@@ -270,7 +270,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     @DisplayName("Retrieve")
     class RetrieveTests {
         @Test
-        public void should_return_found() {
+        void should_return_found() {
             var category = persistTaskCategory(randomizeTaskCategory());
 
             //@formatter:off
@@ -292,7 +292,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_not_found() {
+        void should_return_404_when_not_found() {
             //@formatter:off
             given()
                         .header(HttpHeaders.AUTHORIZATION, obtainUserAccessToken())
@@ -310,7 +310,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     class UpdateTests {
 
         @Test
-        public void should_update_and_return_202() throws Exception {
+        void should_update_and_return_202() throws Exception {
             var category = persistTaskCategory(randomizeTaskCategory());
 
             //@formatter:off
@@ -366,7 +366,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_400_when_invalid_input() {
+        void should_return_400_when_invalid_input() {
             final TaskCategoryUpdateDto dto = random.nextObject(TaskCategoryUpdateDto.class);
             dto.setName(null);
 
@@ -381,11 +381,11 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.BAD_REQUEST.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_not_found() {
+        void should_return_404_when_not_found() {
             final TaskCategoryUpdateDto dto = random.nextObject(TaskCategoryUpdateDto.class);
 
             //@formatter:off
@@ -399,7 +399,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
     }
 
@@ -408,7 +408,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     class PartialUpdateTests {
 
         @Test
-        public void should_update_and_return_202() throws Exception {
+        void should_update_and_return_202() throws Exception {
             var category = persistTaskCategory(randomizeTaskCategory());
 
             //@formatter:off
@@ -464,7 +464,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
         }
 
         @Test
-        public void should_return_404_when_not_found() {
+        void should_return_404_when_not_found() {
             final TaskCategoryUpdateDto dto = random.nextObject(TaskCategoryUpdateDto.class);
 
             //@formatter:off
@@ -478,7 +478,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
     }
@@ -488,7 +488,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     class DeleteTests {
 
         @Test
-        public void should_delete_and_return_204() {
+        void should_delete_and_return_204() {
             var category = persistTaskCategory(randomizeTaskCategory());
 
             //@formatter:off
@@ -501,11 +501,11 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NO_CONTENT.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
 
         @Test
-        public void should_return_404_when_not_found() {
+        void should_return_404_when_not_found() {
             //@formatter:off
             given()
                         .header(HttpHeaders.AUTHORIZATION, obtainUserAccessToken())
@@ -516,7 +516,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
                 .statusCode(HttpStatus.NOT_FOUND.value());
             //@formatter:on
 
-            assertThat(repository.count()).isEqualTo(0);
+            assertThat(repository.count()).isZero();
         }
     }
 
@@ -525,7 +525,7 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
     class EventTests {
 
         @Test
-        public void should_return_found() {
+        void should_return_found() {
             var category = persistTaskCategory(randomizeTaskCategory());
 
             //@formatter:off
@@ -543,9 +543,9 @@ public class TaskCategoryApiIntegrationTest extends AbstractIntegrationTest {
 
             assertThat(eventRepository.count()).isEqualTo(1);
             assertThat(result).hasSize(1);
-            assertThat(result.get(0).getEvent()).isEqualTo(Event.EventType.CREATE.name());
-            assertThat(result.get(0).getSource()).isEqualTo(Event.SourceType.TASK_CATEGORY.name());
-            assertThat(result.get(0).getCreatedBy()).isEqualTo(category.getCreatedBy());
+            assertThat(result.getFirst().getEvent()).isEqualTo(Event.EventType.CREATE.name());
+            assertThat(result.getFirst().getSource()).isEqualTo(Event.SourceType.TASK_CATEGORY.name());
+            assertThat(result.getFirst().getCreatedBy()).isEqualTo(category.getCreatedBy());
         }
 
     }
